# NextTasks

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CalDavNetwork.cpp  CalDavNetwork.h  ContentHubBridge.cpp  ContentHubBridge.h  LICENSE  README.md  clickable.yaml  main.cpp  manifest.json.in  nexttasks-contenthub.json  nexttasks.accounts  nexttasks.apparmor  nexttasks.desktop.in
po/: CMakeLists.txt  ca.po  da.po  de.po  es.po  fi.po  fr.po  it.po  nb.po  nexttasks.cloudsite.pot  nl.po  pl.po  ru.po  sv.po  uk.po
qml/: Main.qml  qml.qrc
qml/UTControls/: CalendarDatePicker.qml  FlatActionButton.qml  FlatStepButton.qml  ReorderableListView.qml  TimePicker.qml  TreeReorderableListView.qml  qmldir
qml/backend/: AccountSessionAdapter.qml  AppController.qml  AuthCore.js  TaskShareExportPage.qml  TaskShareExportPageUbuntu.qml  TaskShareImportHandler.qml  TaskShareImportHandlerUbuntu.qml  TasksApiClient.qml  TasksCache.qml  TasksController.qml
qml/pages/: AboutPage.qml  AccountSelectionPage.qml  HomePage.qml  LanguageSelectionPage.qml  SettingsPage.qml  TaskConflictResolutionPage.qml  TaskDetailPage.qml
scripts/: desktop-dark.sh  desktop-test.sh
tests/: test_contracts.py
